--- a/test-output/old/Default suite/toc.html
+++ b/test-output/old/Default suite/toc.html
@@ -10,15 +10,7 @@
 <tr valign='top'>
 <td>1 test</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<<<<<<< HEAD
-<<<<<<< HEAD
 <td>3 methods:<br/>
-=======
-<td>2 methods:<br/>
->>>>>>> a618da41f99da080311aadee62e4f50c4eea853d
-=======
-<td>1 method:<br/>
->>>>>>> df368066f6b4a39cacbdcc30ca140e67e18bfd19
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -28,17 +20,9 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<<<<<<< HEAD
-<<<<<<< HEAD
-<table style='width: 100%'><tr><td valign='top'>Default test (3/0/0)</td><td valign='top' align='right'>
-=======
-<table style='width: 100%'><tr><td valign='top'>Default test (0/2/0)</td><td valign='top' align='right'>
->>>>>>> a618da41f99da080311aadee62e4f50c4eea853d
-=======
-<table style='width: 100%'><tr><td valign='top'>Default test (0/1/0)</td><td valign='top' align='right'>
->>>>>>> df368066f6b4a39cacbdcc30ca140e67e18bfd19
+<table style='width: 100%'><tr><td valign='top'>Default test (2/1/0)</td><td valign='top' align='right'>
   <a href='Default test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
